# wenjie-obs-personal

./: .gitignore  CMakeLists.txt  README.md
Setup2/: Setup2.vdproj
Setup2/Debug/: Setup2.msi
cmake/Modules/: CopyMSVCBins.cmake
cmake/osxbundle/: obs.icns
libobs/media-io/: audio-io.c  video-io.c
obs/: CMakeLists.txt  MyInt64Mq.cpp  MyInt64Mq.h  YDBRefreshSpace.cpp  YDBRefreshSpace.h  YDBUpdate.cpp  YDBUpdate.h  main.c  obs-app.cpp  obs-app.hpp  obs.aps  obs.rc.bak  oss_config.c  platform-windows.cpp  properties-view.cpp  resource.h  showimg.cpp  showimg.h  update-progressbar.cpp  update-progressbar.h  uploadfiledialog.cpp  uploadfiledialog.hpp  volume-control.cpp  volume-control.hpp  window-basic-main-outputs.cpp  window-basic-main-profiles.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-preview.cpp  window-basic-settings.cpp  window-basic-settings.hpp  window-basic-source-select.cpp  window-basic-status-bar.cpp  window-basic-status-bar.hpp  window-ydb-basic-settings.cpp  window-ydb-basic-settings.h  window-ydb-filename.cpp  window-ydb-filename.h  window-ydb-filepath.cpp  window-ydb-filepath.h  (+2 more)
obs/data/locale/: zh-CN.ini
obs/data/themes/: ydb.qss
obs/forms/: OBSBasic.ui  OBSBasic.ui.bak  OBSBasicSettings.ui  YDBBasicSettings.ui  YDBFileName.ui  YDBFilePath.ui  YDBSetting.qrc  YDBSettings.ui  YDBUpdate.ui  obs.qrc  showimg.ui  uploadfiledialog.ui
obs/navbar/: navdelegate.cpp  navmodel.h  navview.cpp
obs/oss/: main.c  oss_config.c  oss_multipart_upload_sample.c  oss_sample_util.h  test.cpp  upload_config.c  upload_config.h
oss-sdk/: CMakeLists.txt  main.c  oss_config.c
oss-sdk/oss_c_sdk/Debug/: oss_c_sdk.idb
oss-sdk/oss_c_sdk/Debug/oss_c_sdk.tlog/: CL.command.1.tlog  CL.read.1.tlog  Lib-link.read.1.tlog  lib.command.1.tlog
oss-sdk/oss_c_sdk/Release/oss_c_sdk.tlog/: CL.read.1.tlog  Lib-link.read.1.tlog  oss_c_sdk.lastbuildstate
oss_c_sdk/: oss_c_sdk.vcxproj
oss_c_sdk/Debug/oss_c_sdk.tlog/: CL.write.1.tlog  Lib-link.write.1.tlog  oss_c_sdk.lastbuildstate
oss_c_sdk/Release/oss_c_sdk.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog
plugins/: CMakeLists.txt
plugins/obs-ffmpeg/: obs-ffmpeg-output.c
